--- a/release/static/css/index.css
+++ b/release/static/css/index.css
@@ -2,6 +2,7 @@ body, html {
   width: 100%;
   height: 100%;
   font-family: 'Roboto', sans-serif;
+  font-weight: 300;
 }
 
 .is-stretch {
@@ -20,13 +21,24 @@ body, html {
 
 #display {
   height: 7rem;
+  overflow: hidden;
 }
 
 #display .display {
-  width: 100%;
+  min-width: 100%;
   height: 50%;
-  padding: 1rem;
-  text-align: right;
+  padding: 0 1rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  white-space: nowrap;
+  transition: all 0.5s ease;
+}
+
+#display .active {
+  height: 100%;
+  font-size: 4rem;
+  font-weight: 100;
 }
 
 #buttons {
