--- a/release/static/css/index.css
+++ b/release/static/css/index.css
@@ -33,6 +33,7 @@ body, html {
   align-items: center;
   white-space: nowrap;
   transition: all 0.5s ease;
+  box-shadow: inset 0 0 1rem #f5f5f5;
 }
 
 #display .active {
